Main style mobile

--- a/source/less/body.less
+++ b/source/less/body.less
@@ -1,8 +1,8 @@
-.page__body {
-  width: 320px;
+.body {
+  width: @mobile-width;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin-left: 50px;
   background-color: @white;
 /*   outline: 2px solid #ffaa33; */
   font-family: 'Blogger Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
