--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -3,13 +3,20 @@
 @dark-blue: #182044;
 @darker-blue: #161C35;
 @special-orange: #FF8D30;
+@orange-light: #F97676;
 @orange-basic: #FFD74B;
 @special-yellow-dark: #FFBD30;
 @yellow: #FFA530;
 @special-grey: #444444;
+@grey-light: #E6E8F1;
 @basic-grey: #EDEFF6;
+@grey-soft: #E1E3E9;
 @black: #000;
 @basic-blue-light: #1D2E5B;
+@blue-shiny: #132576;
+@blue-lighter: #101D41;
+@blue-lighter-transparent: rgba(16, 29, 65, 0.15);
+@green-light: #81E31E;
 
 
 
