--- a/source/less/country-descrition.less
+++ b/source/less/country-descrition.less
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  width: 270px;
+  width: @wrapper-width;
   padding-top: 22px;
   padding-left: 24px;
   background-color: @white;
