--- a/source/less/section-description.less
+++ b/source/less/section-description.less
@@ -7,8 +7,8 @@
   color: @white;
   margin-bottom: 20px;
 
-  &--modifier {
-    width: 320px;
+  &--modified {
+    width: @mobile-width;
     justify-self: flex-start;
     margin-left: 25px;
     margin-bottom: 60px;
