--- a/source/less/section-title.less
+++ b/source/less/section-title.less
@@ -12,8 +12,9 @@
   }
 
   &--modified {
-    width: 320px;
+    width: @mobile-width;
     justify-self: flex-start;
     margin-left: 25px;
   }
+
 }
