--- a/source/less/authorization-link.less
+++ b/source/less/authorization-link.less
@@ -1,5 +1,5 @@
 .authorization-link {
-  width: 270px;
+  width: @wrapper-width;
   height: 50px;
   border-radius: 25px;
   background-color: @orange-basic;
