--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,5 +1,5 @@
 .main-nav {
-  width: @mobile;
+  width: @mobile-width;
   position: absolute;
   top: 0;
   left: 0;
@@ -36,7 +36,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    width: 270px;
+    width: @wrapper-width;
     margin-top: 51px;
   }
 
@@ -44,7 +44,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    width: 270px;
+    width: @wrapper-width;
   }
 
   &__phone-link {
