--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,8 +3,10 @@
 @import "fonts.less";
 @import "colors.less";
 @import "var.less";
+@import "mixins.less";
+@import "z-index.less";
 
-@import "page__body.less";
+@import "body.less";
 @import "header.less";
 @import "promo.less";
 @import "footer.less";
@@ -20,6 +22,13 @@
 @import "countries.less";
 @import "country-descrition.less";
 @import "show-button.less";
+@import "users.less";
+@import "user-card.less";
+@import "mark-level.less";
+@import "business-rates.less";
+@import "business-rates-modal.less";
+@import "address.less";
+@import "map.less";
 
 
 
@@ -47,7 +56,7 @@ section {
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 270px;
+  width: @wrapper-width;
   margin: 0 auto;
-/*   outline: 2px solid grey; */
+  outline: 2px solid grey;
 }
