Cтили главной мобильная

--- a/source/less/business-rates.less
+++ b/source/less/business-rates.less
@@ -4,10 +4,9 @@
   background-color: @grey-light;
   margin-top: -25px;
   z-index: @business-rates-z;
-  padding-top: 59px;
+  padding-top: 65px;
   padding-bottom: 40px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
+  .border-radius-all(0px, 0px, 25px, 25px);
 
   &__wrapper {
     padding-left: @wrapper-margin-left;
