--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -17,6 +17,7 @@
 @blue-lighter: #101D41;
 @blue-lighter-transparent: rgba(16, 29, 65, 0.15);
 @green-light: #81E31E;
+@black-transparent: rgba(29, 46, 91, 0.14);
 
 
 
