--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -58,3 +58,11 @@
   box-sizing: border-box;
   background-color: @back-color;
 }
+
+.border-radius-all(@lt:0, @rt:0, @lb:0, @rb:0) {
+  border-top-right-radius: @lt;
+  border-top-left-radius: @rt;
+  border-bottom-right-radius: @lb;
+  border-bottom-left-radius: @rb;
+}
+
