--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -1,8 +1,10 @@
 .promo {
+  position: relative;
   background: url(../img/traveller.png) top 129px center / 192px 255px no-repeat,
               url(../img/promo-bg.jpg) top center / 320px 384px no-repeat,
               url(../img/promo-bg-blue.png) top 384px center /320px 285px no-repeat,
               url(../img/promo-bg-darkblue.png) top 669px center /320px 278px no-repeat;
+  z-index: @promo-z;
 
 
   &__header {
