--- a/source/less/service-info.less
+++ b/source/less/service-info.less
@@ -6,9 +6,11 @@
   margin-top: -1px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
-  z-index: 1;
+  z-index: @service-info;
+  .border-radius-all(0px, 0px, 25px, 25px);
+
 
   &__wrapper {
-    padding: 33px 0 82px 45px;
+    padding: 33px 0 70px 45px;
   }
 }
