--- a/source/less/style.less
+++ b/source/less/style.less
@@ -29,6 +29,9 @@
 @import "business-rates-modal.less";
 @import "address.less";
 @import "map.less";
+@import "feedback.less";
+@import "phone-block.less";
+@import "mail-block.less";
 
 
 
@@ -58,5 +61,5 @@ section {
   flex-wrap: wrap;
   width: @wrapper-width;
   margin: 0 auto;
-  outline: 2px solid grey;
+/*   outline: 2px solid grey; */
 }
