--- a/source/less/users.less
+++ b/source/less/users.less
@@ -6,13 +6,14 @@
   background-color: @dark-blue;
   margin-top: -35px;
   padding-top: 65px;
+  padding-bottom: 23px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
-  z-index: -1;
+  z-index: 4;
 
 
   &__wrapper {
-    padding-top: 34px;
+    padding-top: 45px;
   }
 
 }
