--- a/source/less/z-index.less
+++ b/source/less/z-index.less
@@ -2,5 +2,8 @@
 @footer-z: 1;
 @address-z: 1;
 @feedback-z: 2;
-@business-rates: 3;
 @business-rates-z: 3;
+@users-z: 4;
+@countries-z: 5;
+@promo-z: 6;
+@service-info: 7;
