--- a/source/less/body.less
+++ b/source/less/body.less
@@ -2,6 +2,7 @@
   width: @mobile-width;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   margin-left: 50px;
   background-color: @white;
 /*   outline: 2px solid #ffaa33; */
