--- a/source/less/business-rates-modal.less
+++ b/source/less/business-rates-modal.less
@@ -2,15 +2,15 @@
   width: @wrapper-width;
   height: @business-modal-height;
   background-color: @white;
-  z-index: 5;
   .zero-centered-modal(fixed);
-  left: -930px;
-  padding-top: 34px;
+  z-index: 9;
+
+  box-shadow: 0px 2px 8px @black-transparent;
+  box-sizing: border-box;
+  border-radius: 20px;
 
   &__wrapper {
     padding: 11px 25px 0px 25px;
-    border: 2px solid red;
-
   }
 
   &__list {
