--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,6 +1,9 @@
 .footer{
+  position: relative;
   width: inherit;
   margin: 0;
   padding: 0;
-  background-color: yellowgreen;
+  background-color: white;
+  .border-radius-all(25px, 25px, 0, 0);
+  margin-top: -20px;
 }
