--- a/source/less/map.less
+++ b/source/less/map.less
@@ -1,6 +1,8 @@
 .map {
   position: relative;
-  width: 320px;
-  margin-top: -15px;
+  width: @mobile-width;
+  height: 424px;
+  margin-top: -80px;
   z-index: @map-z;
+  background-color: aqua;
 }
