--- a/source/less/body.less
+++ b/source/less/body.less
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-left: 50px;
+  margin: 0 auto;
   background-color: @white;
 /*   outline: 2px solid #ffaa33; */
   font-family: 'Blogger Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
