--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -18,6 +18,8 @@
 @blue-lighter-transparent: rgba(16, 29, 65, 0.15);
 @green-light: #81E31E;
 @black-transparent: rgba(29, 46, 91, 0.14);
+@grey-lighter: #F2F2F2;
+@grey-dark: #F3F4F8;
 
 
 
