--- a/source/less/mail-block.less
+++ b/source/less/mail-block.less
@@ -4,8 +4,6 @@
     align-items: center;
     width: @wrapper-width;
 
-
-
     &__mail-link {
       font-family: Blogger Sans;
       font-style: normal;
@@ -22,7 +20,8 @@
       fill: @orange-basic;
     }
 
-
-
+    &__mail-link--colored {
+      color: @blue-basic;
+    }
 
 }
