--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -51,15 +51,15 @@
   color: @white;
 }
 
-.make-circle(@width, @back-color) {
+.make-circle(@width, @back-color, @border-radius:50%) {
   width: @width;
   height: @width;
-  border-radius: 50%;
+  border-radius: @border-radius;
   box-sizing: border-box;
   background-color: @back-color;
 }
 
-.border-radius-all(@lt:0, @rt:0, @lb:0, @rb:0) {
+.border-radius-all(@lt:20px, @rt:20px, @lb:20px, @rb:20px) {
   border-top-right-radius: @lt;
   border-top-left-radius: @rt;
   border-bottom-right-radius: @lb;
