--- a/source/less/style.less
+++ b/source/less/style.less
@@ -32,7 +32,7 @@
 @import "feedback.less";
 @import "phone-block.less";
 @import "mail-block.less";
-
+@import "social-list.less";
 
 
 h1, h2, h3, p, ul, blockquote, cite {
