--- a/source/less/business-rates-modal.less
+++ b/source/less/business-rates-modal.less
@@ -10,21 +10,34 @@
   border-radius: 20px;
 
   &__wrapper {
-    padding: 11px 25px 0px 25px;
+    justify-content: center;
+    padding-top: 34px;
   }
 
   &__list {
+    width: @wrapper-width - 51px;
+    justify-content: flex-start;
     list-style-type: none;
     padding: 0;
     margin: 0;
-    margin-bottom: 45px;
+    margin-bottom: 30px;
   }
 
   &__item {
     position: relative;
     margin-bottom: 0px;
+    padding-top: 11px;
+    padding-bottom: 11px;
     box-sizing: border-box;
     border-top: 1px solid @grey-soft;
+    font-family: Blogger Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: @special-grey;
 
   }
 
@@ -33,5 +46,19 @@
     padding-top: 12px;
   }
 
+  &__close-modal {
+    width: @wrapper-width;
+    background-color: @grey-dark;
+    padding-top: 15px;
+    padding-bottom: 18px;
+    font-family: Blogger Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0em;
+    color: @basic-blue-light;
+    .border-radius-all(0, 0);
+  }
 
 }
