--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,9 +1,44 @@
 .footer{
   position: relative;
-  width: inherit;
+  width: @mobile-width;
+  min-height: @footer-height;
   margin: 0;
   padding: 0;
   background-color: white;
   .border-radius-all(25px, 25px, 0, 0);
-  margin-top: -20px;
+  margin-top: -70px;
+  padding-bottom: 19px;
+
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__logo-link {
+    margin-top: 37px;
+    margin-bottom: 33px;
+  }
+
+
+  &__author {
+    width: @wrapper-width;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 5px;
+    border-top: 1px solid @grey-lighter;
+  }
+
+  &__author-text {
+    font-family: Blogger Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+  }
+
 }
