--- a/source/less/phone-block.less
+++ b/source/less/phone-block.less
@@ -12,7 +12,7 @@
     font-size: 16px;
     line-height: 18px;
     text-decoration: none;
-    color: @orange-basic;
+    color: @blue-basic;
     margin-left: 16px;
   }
 
@@ -20,8 +20,16 @@
     fill: @orange-basic;
   }
 
-  &--modified {
+  &__phone-link {
     color: @orange-basic;
+  }
+
+  &__phone-link--colored {
+    color: @blue-basic;
+  }
+
+  &--modified {
+    margin-top: 0;
   }
 
 }
