Стилизация главной страницы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,18 +1,15 @@
 @import "normalize.less";
-
 @import "fonts.less";
 @import "colors.less";
 @import "var.less";
 @import "mixins.less";
 @import "z-index.less";
-
 @import "body.less";
 @import "header.less";
 @import "promo.less";
 @import "footer.less";
 @import "main-nav.less";
 @import "authorization-link.less";
-@import "logo-link.less";
 @import "hamburger-button.less";
 @import "logo-and-btn.less";
 @import "section-title.less";
@@ -34,8 +31,13 @@
 @import "mail-block.less";
 @import "social-list.less";
 
-
-h1, h2, h3, p, ul, blockquote, cite {
+h1,
+h2,
+h3,
+p,
+ul,
+blockquote,
+cite {
   margin: 0;
   padding: 0;
 }
@@ -61,5 +63,5 @@ section {
   flex-wrap: wrap;
   width: @wrapper-width;
   margin: 0 auto;
-/*   outline: 2px solid grey; */
+  /*   outline: 2px solid grey; */
 }
