--- a/source/less/address.less
+++ b/source/less/address.less
@@ -3,25 +3,26 @@
   width: @mobile-width;
   min-height: @addrres-height;
   margin-top: -32px;
-  padding-top: 74px;
+  padding-top: 64px;
   background-color: @orange-basic;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   z-index: @address-z;
   box-sizing: border-box;
-
-  &__mark-icon {
-    margin-right: 16px;
-    margin-bottom: 23px;
-  }
-
-  &__adress-text {
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 22px;
-    text-transform: uppercase;
-    color: @basic-blue-light;
-  }
 }
+
+.address__mark-icon {
+  margin-right: 16px;
+  margin-bottom: 33px;
+}
+
+.address__adress-text {
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: @basic-blue-light;
+}
+
