--- a/source/less/authorization-link.less
+++ b/source/less/authorization-link.less
@@ -4,7 +4,7 @@
   border-radius: 25px;
   background-color: @orange-basic;
   text-decoration: none;
-  font-family: Blogger Sans;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 17px;
@@ -21,4 +21,3 @@
     padding-top: 5px;
   }
 }
-
