--- a/source/less/header.less
+++ b/source/less/header.less
@@ -1,13 +1,12 @@
-.header{
+.header {
   position: relative;
   width: inherit;
   align-items: center;
   margin: 0;
   padding: 19px 25px 52px 25px;
   background-color: @darker-blue;
+}
 
-  &__wrapper {
-    align-items: center;
-  }
-
+.header__wrapper {
+  align-items: center;
 }
