--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -12,7 +12,7 @@
   border-right-style: none;
 }
 
-.zero-centered(){
+.zero-centered() {
   top: 0;
   right: 0;
   bottom: 0;
@@ -33,7 +33,7 @@
   left: @bias;
 }
 
-.zero-centered-modal(@position){
+.zero-centered-modal(@position) {
   top: 0;
   right: 0;
   bottom: 0;
@@ -42,8 +42,8 @@
   margin: auto;
 }
 
-.bs-normal-16(){
-  font-family: Blogger Sans;
+.bs-normal-16() {
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -65,4 +65,3 @@
   border-bottom-right-radius: @lb;
   border-bottom-left-radius: @rb;
 }
-
