--- a/source/less/section-content.less
+++ b/source/less/section-content.less
@@ -1,5 +1,5 @@
 .section-content {
-  font-family: Blogger Sans;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
