--- a/source/less/section-title.less
+++ b/source/less/section-title.less
@@ -1,24 +1,9 @@
 .section-title {
-  font-family: Blogger Sans;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 24px;
   color: @special-orange;
   margin-bottom: 20px;
-
-  &--profile {
-    margin-bottom: 0;
-  }
-
-  &--modified {
-    width: @mobile-width;
-    justify-self: flex-start;
-    margin-left: 25px;
-  }
-
-  &--margin {
-    margin-bottom: 28px;
-  }
-
 }
