--- a/source/less/show-button.less
+++ b/source/less/show-button.less
@@ -7,10 +7,8 @@
   min-height: 62px;
   border-radius: 10px;
   background-color: @orange-basic;
-  margin-bottom: 26px;
-  margin-top: 10px;
   padding-left: 23px;
-  font-family: Blogger Sans;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -25,14 +23,9 @@
     .arrow-mixin(right, 6.5px, @basic-blue-light);
   }
 
-  &--modified {
-    margin-bottom: 0px;
-  }
-
   &--address {
     border: 3px solid @blue-basic;
     box-sizing: border-box;
     border-radius: 10px;
   }
-
 }
