--- a/source/less/style.less
+++ b/source/less/style.less
@@ -30,6 +30,7 @@
 @import "phone-block.less";
 @import "mail-block.less";
 @import "social-list.less";
+@import "modal-window.less";
 
 h1,
 h2,
@@ -47,7 +48,7 @@ button {
 }
 
 section {
-  margin-top: 0px;
+  margin-top: 0 px;
 }
 
 .visually-hidden {
@@ -63,5 +64,4 @@ section {
   flex-wrap: wrap;
   width: @wrapper-width;
   margin: 0 auto;
-  /*   outline: 2px solid grey; */
 }
