--- a/source/less/body.less
+++ b/source/less/body.less
@@ -5,8 +5,7 @@
   justify-content: center;
   margin: 0 auto;
   background-color: @white;
-/*   outline: 2px solid #ffaa33; */
-  font-family: 'Blogger Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-weight: 300;
   font-size: 16px;
   line-height: 22px;
