--- a/source/less/country-descrition.less
+++ b/source/less/country-descrition.less
@@ -5,32 +5,25 @@
   width: @wrapper-width;
   padding-top: 22px;
   padding-left: 24px;
+  padding-bottom: 20px;
   background-color: @white;
   border-radius: 10px;
   box-sizing: border-box;
   margin-top: -15px;
   z-index: 1;
 
-  &__header {
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 21px;
-    line-height: 21px;
-    margin-right: 81px;
-    color: @black;
+  &--indent {
+    padding-bottom: 2px;
   }
-
-  &__header--modified {
-    margin-right: 105px;
-  }
-
-  &__content {
-    margin-bottom: 24px;
-  }
-
-  &__content--modified {
-    margin-bottom: -1px;
-  }
-
 }
+
+.country-description__header {
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 21px;
+  margin-right: 81px;
+  color: @black;
+}
+
