--- a/source/less/feedback.less
+++ b/source/less/feedback.less
@@ -1,60 +1,56 @@
 .feedback {
   position: relative;
   margin-top: -25px;
-  padding-top: 105px;
-  padding-bottom: 15px;
+  padding-top: 95px;
+  padding-bottom: 25px;
   z-index: @feedback-z;
   background-color: @blue-basic;
   box-sizing: border-box;
-  .border-radius-all(0px, 0px, 30px, 30px);
+  .border-radius-all(0, 0, 30px, 30px);
+}
 
-  &__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+.feedback__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-  &__authorization {
-    color: @orange-basic;
-  }
+.feedback__authorization {
+  color: @orange-basic;
+}
 
-  &__email-block {
-    position: relative;
-    margin-bottom: 29px;
-    margin-top: 10px;
-  }
+.feedback__email-block {
+  position: relative;
+  margin-bottom: 29px;
+  margin-top: 10px;
+}
 
-  &__email {
-    display: block;
-    width: @wrapper-width;
-    height: 62px;
-    border-radius: 10px;
-    border: none;
-    padding-left: 25px;
-    box-sizing: border-box;
-    font-family: Blogger Sans;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
+.feedback__email {
+  display: block;
+  width: @wrapper-width;
+  height: 62px;
+  border-radius: 10px;
+  border: none;
+  padding-left: 25px;
+  box-sizing: border-box;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0 em;
+  text-align: left;
+}
 
-  }
-
-  &__send-email {
-    position: absolute;
-    top: 0;
-    right: 0;
-    .make-circle(62px, @orange-basic, 10px);
-
-  }
-
-  &__send-email::after {
+.feedback__send-email {
+  &::after {
     content: "";
     display: block;
     .zero-centered();
     .arrow-mixin(right, 6.5px, @basic-blue-light);
   }
-
+  position: absolute;
+  top: 0;
+  right: 0;
+  .make-circle(62px, @orange-basic, 10px);
 }
