--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -10,25 +10,29 @@
   padding: 27px 25px 41px 25px;
   box-sizing: border-box;
   background-color: @white;
+}
 
-  &__list {
-    margin: 0;
-    padding: 0;
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 35px;
-    text-align: center;
-    text-transform: uppercase;
-    list-style-type: none;
-    margin-bottom: 51px;
-    margin-top: 66px;
-  }
+.main-nav__list {
+  margin: 0;
+  padding: 0;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+  text-align: center;
+  text-transform: uppercase;
+  list-style-type: none;
+  margin-bottom: 51px;
+  margin-top: 66px;
+}
 
-  &__list-item-link {
-    text-decoration: none;
-    color: @blue-basic;
-  }
+.main-nav__contacts {
+  margin-top: 51px;
+  margin-bottom: 41px;
+}
 
+.main-nav__list-item-link {
+  text-decoration: none;
+  color: @blue-basic;
 }
