--- a/source/less/phone-block.less
+++ b/source/less/phone-block.less
@@ -3,33 +3,22 @@
   flex-wrap: wrap;
   align-items: center;
   width: @wrapper-width;
-  margin-top: 51px;
+}
 
-  &__phone-link {
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 18px;
-    text-decoration: none;
-    color: @blue-basic;
-    margin-left: 16px;
-  }
-
-  &__phone-icon {
-    fill: @orange-basic;
-  }
-
-  &__phone-link {
-    color: @orange-basic;
-  }
-
-  &__phone-link--colored {
+.phone-block__link {
+  &--colored {
     color: @blue-basic;
   }
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 18px;
+  text-decoration: none;
+  color: @orange-basic;
+  margin-left: 16px;
+}
 
-  &--modified {
-    margin-top: 0;
-  }
-
+.phone-block__icon {
+  fill: @orange-basic;
 }
