--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -1,125 +1,119 @@
 .promo {
   position: relative;
-  background: url(../img/traveller.png) top 129px center / 192px 255px no-repeat,
-              url(../img/promo-bg.jpg) top center / 320px 384px no-repeat,
-              url(../img/promo-bg-blue.png) top 384px center /320px 285px no-repeat,
-              url(../img/promo-bg-darkblue.png) top 669px center /320px 278px no-repeat;
+  background: url("../img/traveller.png") top 129px center / 192px 255px no-repeat,
+    url("../img/promo-bg.jpg") top center / 320px 384px no-repeat,
+    url("../img/promo-bg-blue.png") top 384px center /320px 285px no-repeat,
+    url("../img/promo-bg-darkblue.png") top 669px center /320px 278px no-repeat;
   z-index: @promo-z;
+}
 
+.promo__header {
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0;
+  text-align: center;
+  color: @white;
+  margin-bottom: 243px;
+}
 
-  &__header {
-    font-family: Blogger Sans;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 40px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: @white;
-    margin-bottom: 243px;
-  }
+.promo__phone-icon {
+  fill: @darker-blue;
+}
 
-  &__promo__contacts {
-    display: flex;
-    flex-wrap: wrap;
-  }
+.promo__mail-icon {
+  fill: @darker-blue;
+}
 
-  &__phone-icon {
-    fill: @darker-blue;
-  }
+.promo__contacts {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 22px;
+}
 
-  &__mail-icon {
-    fill: @darker-blue;
-  }
+.promo__quote {
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 22px;
+  color: @white;
+  margin-bottom: 18px;
+  margin-left: 27px;
+}
 
-  &__contacts {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
-    margin-bottom: 22px;
-  }
+.promo__cite {
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 22px;
+  color: @white;
+  margin-left: 27px;
+  margin-bottom: 29px;
+}
 
-  &__quote {
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 22px;
-    color: @white;
-    margin-bottom: 18px;
-    margin-left: 27px;
-  }
+.promo__list {
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  list-style-type: none;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  color: @darker-blue;
+  margin-bottom: 38px;
+  counter-reset: promo-num;
+}
 
-  &__cite {
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 22px;
-    color: @white;
-    margin-left: 27px;
-    margin-bottom: 29px;
-  }
+.promo__list-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 22px 0 30px 24px;
+  box-sizing: border-box;
 
-  &__list {
-    width: inherit;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    list-style-type: none;
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 18px;
-    color: @darker-blue;
-    margin-bottom: 39px;
-  }
-
-  &__list-item {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 22px 0 30px 24px;
-    box-sizing: border-box;
-  }
-
-  &__item-number {
-    color: @white;
-    padding-right: 21px;
-    font-family: Blogger Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 18px;
-  }
-
-  &__list-item--1 {
+  &--1 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: @special-orange;
   }
 
-  &__list-item--2 {
+  &--2 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-top: -8px;
     background-color: @yellow;
   }
 
-  &__list-item--3 {
+  &--3 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-top: -8px;
     background-color: @special-yellow-dark;
   }
 
-  &__list-item--4 {
+  &--4 {
     border-radius: 10px;
     margin-top: -8px;
     padding-bottom: 23px;
     background-color: @orange-basic;
   }
+}
 
+.promo__item-number {
+  color: @white;
+  padding-right: 21px;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
 }
