--- a/source/less/section-description.less
+++ b/source/less/section-description.less
@@ -1,5 +1,5 @@
 .section-description {
-  font-family: Blogger Sans;
+  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
@@ -7,16 +7,11 @@
   color: @white;
   margin-bottom: 20px;
 
-  &--modified {
-    width: @mobile-width;
-    justify-self: flex-start;
-    margin-left: 25px;
-    margin-bottom: 60px;
-    color: @special-grey;
-  }
-
   &--justified {
     text-align: center;
   }
-}
 
+  &--colored {
+    color: @special-grey;
+  }
+}
