--- a/source/less/service-info.less
+++ b/source/less/service-info.less
@@ -1,16 +1,13 @@
 .service-info {
   position: relative;
-  background: url(../img/about-service-bg2.png) top right / 292px 353px no-repeat,
-              url(../img/about-mobile-back.png) top left / 113px 132px no-repeat;
+  background: url("../img/about-service-bg2.png") top right / 292px 353px no-repeat,
+    url("../img/about-mobile-back.png") top left / 113px 132px no-repeat;
   background-color: @darker-blue;
-  margin-top: -1px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
   z-index: @service-info;
-  .border-radius-all(0px, 0px, 25px, 25px);
-
-
-  &__wrapper {
-    padding: 33px 0 70px 45px;
-  }
+  .border-radius-all(0, 0, 25px, 25px);
 }
+
+.service-info__wrapper {
+  padding: 33px 0 80px 45px;
+}
+
