--- a/source/less/users.less
+++ b/source/less/users.less
@@ -1,19 +1,22 @@
 .users {
   position: relative;
-  background: url(../img/users-block-bg.png) top 69px left / 113px 132px no-repeat,
-              url(../img/users-smolov-bg.png) top 69px right / 143px 143px no-repeat,
-              url(../img/users-rogovaya-bg.png) top 340px left / 64px 71px no-repeat;
+  background: url("../img/users-block-bg.png") top 69px left / 113px 132px no-repeat,
+    url("../img/users-smolov-bg.png") top 69px right / 143px 143px no-repeat,
+    url("../img/users-rogovaya-bg.png") top 340px left / 64px 71px no-repeat;
   background-color: @dark-blue;
-  margin-top: -35px;
+  margin-top: -45px;
   padding-top: 65px;
-  padding-bottom: 23px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
+  padding-bottom: 25px;
+  .border-radius-all(0, 0, 25px, 25px);
   z-index: 4;
-
-
-  &__wrapper {
-    padding-top: 45px;
-  }
-
 }
+
+.users__wrapper {
+  padding-top: 45px;
+}
+
+.users__title-block {
+  margin-left: 25px;
+  margin-bottom: 57px;
+}
+
