--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -10,7 +10,7 @@
   font-family: "Blogger Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("/fonts/bloggersans-bold.woff2") format("woff2"), url("/source/fonts/bloggersans-bold.woff2") format("woff");
+  src: url("/fonts/bloggersans-bold.woff2") format("woff2"), url("/source/fonts/bloggersans-bold.woff") format("woff");
   font-display: swap;
 }
 
