--- a/source/less/header.less
+++ b/source/less/header.less
@@ -1,7 +1,6 @@
 .header {
   position: relative;
-  width: inherit;
-  align-items: center;
+  width: @wrapper-width;
   margin: 0;
   padding: 19px 25px 52px 25px;
   background-color: @darker-blue;
