--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,7 +1,7 @@
 .main-nav {
   width: @mobile-width;
   position: absolute;
-  z-index: 10;
+  z-index: @main-nav-z;
   top: 0;
   left: 0;
   display: flex;
