--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -47,6 +47,7 @@
 }
 
 .promo__cite {
+  display: block;
   font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -69,7 +70,6 @@
   font-size: 18px;
   line-height: 18px;
   color: @darker-blue;
-  margin-bottom: 38px;
   counter-reset: promo-num;
 }
 
