--- a/source/less/address.less
+++ b/source/less/address.less
@@ -11,6 +11,11 @@
   box-sizing: border-box;
 }
 
+.address__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .address__mark-icon {
   margin-right: 16px;
   margin-bottom: 33px;
