--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -42,12 +42,12 @@
   margin: auto;
 }
 
-.bs-normal-16() {
+.bs-normal-16(@font-size:16px, @line-height:16px) {
   font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 16px;
+  font-size: @font-size;
+  line-height: @line-height;
   color: @white;
 }
 
