--- a/source/less/service-info.less
+++ b/source/less/service-info.less
@@ -2,12 +2,12 @@
   position: relative;
   background: url("../img/about-service-bg2.png") top right / 292px 353px no-repeat,
     url("../img/about-mobile-back.png") top left / 113px 132px no-repeat;
-  background-color: @darker-blue;
+  background-color: @blue-basic;
   z-index: @service-info;
   .border-radius-all(0, 0, 25px, 25px);
 }
 
 .service-info__wrapper {
-  padding: 33px 0 80px 45px;
+  padding: 70px 0 70px 45px;
 }
 
