--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -42,7 +42,7 @@
   margin: auto;
 }
 
-.bs-normal-16(@font-size:16px, @line-height:16px) {
+.bs-normal-16(@font-size:16px; @line-height:16px) {
   font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-style: normal;
   font-weight: normal;
