--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -8,6 +8,7 @@
 @special-yellow-dark: #FFBD30;
 @yellow: #FFA530;
 @special-grey: #444444;
+@grey-solid: #CBCED9;
 @grey-light: #E6E8F1;
 @basic-grey: #EDEFF6;
 @grey-soft: #E1E3E9;
@@ -20,3 +21,5 @@
 @black-transparent: rgba(29, 46, 91, 0.14);
 @grey-lighter: #F2F2F2;
 @grey-dark: #F3F4F8;
+@grey-lighten: #DFE3F0;
+@grey-darken: #D4D9EB;
