--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,7 @@
 @import "promo.less";
 @import "footer.less";
 @import "main-nav.less";
+@import "main.less";
 @import "authorization-link.less";
 @import "hamburger-button.less";
 @import "logo-and-btn.less";
@@ -31,6 +32,16 @@
 @import "mail-block.less";
 @import "social-list.less";
 @import "modal-window.less";
+@import "footer-form.less";
+@import "mark-level-form.less";
+@import "profile-settings.less";
+@import "form-page-btn.less";
+@import "tags.less";
+@import "transport.less";
+@import "plans.less";
+@import "plans-card.less";
+@import "add-plans.less";
+@import "plans-step.less";
 
 h1,
 h2,
