--- a/source/less/z-index.less
+++ b/source/less/z-index.less
@@ -1,5 +1,6 @@
 @map-z: 0;
 @footer-z: 1;
+@footer-form-z: 3;
 @address-z: 1;
 @feedback-z: 2;
 @business-rates-z: 3;
@@ -9,3 +10,6 @@
 @promo-z: 6;
 @service-info: 7;
 @main-nav-z: 10;
+@profile-settings-z: 0;
+@plans-z: 1;
+@add-plans: 2;
