--- a/source/less/body.less
+++ b/source/less/body.less
@@ -1,6 +1,6 @@
 .body {
   width: @mobile-width;
-  margin: 0 auto;
+  margin: 0 50px;
   background-color: @white;
   font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-weight: 300;
