--- a/source/less/header.less
+++ b/source/less/header.less
@@ -1,9 +1,10 @@
 .header {
   position: relative;
-  width: @wrapper-width;
+  width: @mobile-width;
   margin: 0;
   padding: 19px 25px 52px 25px;
-  background-color: @darker-blue;
+  background-color: @dark-blue;
+  box-sizing: border-box;
 }
 
 .header__wrapper {
