--- a/source/less/business-rates-modal.less
+++ b/source/less/business-rates-modal.less
@@ -1,6 +1,6 @@
 .business-rates-modal {
   height: @business-modal-height;
-  z-index: 9;
+  z-index: @business-rates-modal;
   box-sizing: border-box;
 }
 
