--- a/source/less/z-index.less
+++ b/source/less/z-index.less
@@ -9,6 +9,7 @@
 @countries__flag-z: 2;
 @promo-z: 6;
 @service-info: 7;
+@business-rates-modal: 9;
 @main-nav-z: 10;
 @profile-settings-z: 0;
 @plans-z: 1;
